# yoink-core

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  docker-compose.override.yml  docker-compose.yaml  justfile  pyproject.toml
browser-extension/: README.md  manifest.json  popup.html  popup.js
docker/: Dockerfile  Dockerfile.backup  Dockerfile.frontend  Dockerfile.nginx  Dockerfile.tg-bot-api  Dockerfile.youtubei  backup-cron-entry.sh  backup.sh  entrypoint.sh  init-proxy.sh  restore.sh  tg-bot-api-entrypoint.sh  tg-login.py
docker/nginx/: nginx.conf  nginx.conf.template
docker/patches/: tdlight-forum-extras.patch  tdlight-forum-extras.patch.h_only  tdlight-proxy-before-auth.patch
docker/youtubei-service/: index.js  package.json
frontend/: .gitignore  components.json  index.html  manifest.tsx  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  plugin-registry.ts  telegram.d.ts  vite-env.d.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/app/: CompactCardHeader.tsx  EmptyState.tsx  InlineSelect.tsx  MarkdownBody.tsx  SettingRow.tsx  StatusBadge.tsx  UserPanel.tsx  index.ts
frontend/src/components/charts/: ChartSkeleton.tsx  HorizontalBars.tsx  MiniBarChart.tsx  PeriodToggle.tsx  StatCard.tsx  colors.ts  index.ts
frontend/src/components/form/: ControlledSelect.tsx  ControlledSwitch.tsx  index.ts
frontend/src/components/ui/: DialogActions.tsx  DividedList.tsx  IconButton.tsx  SkeletonList.tsx  alert-dialog.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  combobox.tsx  command.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  field.tsx  index.ts  input-group.tsx  input.tsx  item.tsx  json-editor.tsx  select.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  slider.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
frontend/src/hooks/: usePermissions.ts  useTelegramWebApp.ts
frontend/src/layout/: AppLayout.tsx  TelegramProvider.tsx
frontend/src/lib/: api-client.ts  auth-provider.ts  data-provider.ts  i18n.ts  user-utils.ts  utils.ts
frontend/src/lib/api/: bot-settings.ts  groups.ts  index.ts  me.ts  meta.ts  permissions.ts  threads.ts  user-settings.ts  users.ts
frontend/src/locales/: en.json  ru.json
frontend/src/pages/unauthorized/: index.tsx
frontend/src/styles/: globals.css
frontend/src/styles/themes/: catppuccin.css  dark.css  light.css
frontend/src/types/: api.ts  plugin.ts
scripts/: backup.sh  browser.sh  build.sh  clean.sh  dev-setup.sh  lint.sh  migrate.sh  tg-login.sh  verify-host.sh
src/db/: alembic.ini
src/db/migrations/: README  env.py
src/tests/: conftest.py  test_api_auth.py  test_apikey.py  test_health.py  test_m2m.py  test_metrics.py  test_permissions.py  test_rbac.py  test_telegram_auth.py
src/yoink/: __init__.py  api_main.py  api_main_cli.py  app.py  combined_main.py  main.py
src/yoink/core/: __init__.py  activity.py  config.py  logging.py  metrics.py  plugin.py  types.py
src/yoink/core/api/: app.py  deps.py  (+6 more)
(+109 files in other folders)
