[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yoink-core"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[job-queue]>=22.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-jose[cryptography]>=3.3",
    "pyyaml>=6.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
yoink = "yoink.main:main"
yoink-api = "yoink.api_main_cli:main"
yoink-combined = "yoink.combined_main:main"

[project.entry-points."yoink.plugins"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
# B008: function calls in defaults are idiomatic for FastAPI (`Depends(...)`, `Query(...)`, etc.)
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
# pydantic models need annotations resolvable at runtime - TC001/TC002/TC003 would break model rebuild
"src/yoink/core/api/schemas.py" = ["TC001", "TC002", "TC003"]
"src/yoink/core/api/routers/*.py" = ["TC001", "TC002", "TC003"]
"src/yoink/core/api/internal/router.py" = ["TC001", "TC002", "TC003"]
"plugins/*/src/**/schemas.py" = ["TC001", "TC002", "TC003"]
"plugins/*/src/**/api/**/*.py" = ["TC001", "TC002", "TC003"]
"plugins/*/src/**/routers/*.py" = ["TC001", "TC002", "TC003"]

[tool.pyrefly]
project-includes = ["**/*.py*", "**/*.ipynb"]
ignore-missing-imports = ["pytest", "pytest_asyncio"]
